--- a/cisreg_GWAS/cisreg-GWAS.Rmd
+++ b/cisreg_GWAS/cisreg-GWAS.Rmd
@@ -407,9 +407,6 @@ tagSNPsInfo <- getBM(attributes = c('chr_name',
 tagSNPsInfo <- tagSNPsInfo[!duplicated(tagSNPsInfo$refsnp_id),]
 
 # Replace the missing data by the NAs
-tagSNPsInfo$consequence_type_tv <- sub(pattern = " ", NA, 
-                                       tagSNPsInfo$consequence_type_tv)
-
 tagSNPsInfo$consequence_type_tv[tagSNPsInfo$consequence_type_tv == ""] <- "Undefined"
 
 # Run the pie chart
@@ -505,9 +502,9 @@ message("Total number of DA-SNPs and LD SNPs: ", nbSNPs)
 ```
 
 
-## Genomic features of SNPs in linkage disequilibrium
+## Genomic features of SNPs (associated + LD)
 
-In this section, we gathering the informations about LD SNPs from Ensembl using `biomaRt package`.
+In this section, we gathering the informations about the SNPs (disease-associated + LD) from Ensembl using the R `biomaRt` package.
 
 ```{r LD_biomart_annotation}
 ## biomaRt annotation
@@ -556,27 +553,27 @@ We gathering the informations about LD SNPs from Ensembl using `biomaRt package`
 
 ```{r snps_of_interest}
 
-## biomaRt annotation
-message("Gathering information from Ensembl BioMart for ", nbSNPs," SNPs")
-snpmart = useMart(biomart = "ENSEMBL_MART_SNP", dataset="hsapiens_snp") # BioMart database and dataset to use.
-snpInfo <- getBM(attributes = c('refsnp_source',
-                                'chr_name',
-                                'chrom_start',
-                                'chrom_end',
-                                'refsnp_id',
-                                'allele_1',
-                                'allele',
-                                'cds_start',
-                                'cds_end',
-                                'ensembl_gene_stable_id',
-                                'consequence_type_tv'), 
-                 filters =  "snp_filter", 
-                 values = rsIDs, # (DArsIDs + LDsnpIDs)
-                 mart = snpmart)
-
-# Remove the duplicated SNPs
-snpInfo <- snpInfo[!duplicated(snpInfo$refsnp_id),]
-#View(snpInfo)
+# # ## biomaRt annotation
+# # message("Gathering information from Ensembl BioMart for ", nbSNPs," SNPs")
+# # snpmart = useMart(biomart = "ENSEMBL_MART_SNP", dataset="hsapiens_snp") # BioMart database and dataset to use.
+# # snpInfo <- getBM(attributes = c('refsnp_source',
+# #                                 'chr_name',
+# #                                 'chrom_start',
+# #                                 'chrom_end',
+# #                                 'refsnp_id',
+# #                                 'allele_1',
+# #                                 'allele',
+# #                                 'cds_start',
+# #                                 'cds_end',
+# #                                 'ensembl_gene_stable_id',
+# #                                 'consequence_type_tv'),
+# #                  filters =  "snp_filter",
+# #                  values = rsIDs, # (DArsIDs + LDsnpIDs)
+# #                  mart = snpmart)
+# 
+# # Remove the duplicated SNPs
+# snpInfo <- snpInfo[!duplicated(snpInfo$refsnp_id),]
+# #View(snpInfo)
 
 
 # Select the non-coding variant by discarding the variants with an annotated CDS start
@@ -584,6 +581,8 @@ message("Selecting SNPs of Interest (in non-coding regions) from Ensembl")
 
 SOIs <- subset(snpInfo,
                cds_start = "NA")
+
+SOIs$consequence_type_tv[SOIs$consequence_type_tv == ""] <- "Undefined"
 
 # Make a non-coding variant bed file
 SOIsBed <- data.frame(chrom = SOIs$chr_name,
@@ -596,7 +595,7 @@ SOIsBed$chrom <- paste("chr", SOIsBed$chrom, sep = "")
 # Export the SOIs
 
 soi.file <- "SOIs.txt"
-soi.path <- file.path("~/cisreg-GWAS_results/EFO_0001068/SOIs", soi.file)
+soi.path <- file.path(result.dir.path["SOIs"], soi.file)
 write.table(x = SOIs$refsnp_id,
               file = soi.path,
               quote = FALSE,
@@ -611,6 +610,8 @@ write.table(x = SOIs$refsnp_id,
 ```{r  fig.cap = paste("Genomic context of SNPs of interest"), out.width = "100%"}
 #SOI$consequence_type_tv <- sub(pattern = " ", "intergenic", 
 #                                       SOI$consequence_type_tv)
+
+
 table <- table(SOIs$consequence_type_tv)
 pct <- round(table/sum(table)*100)
 lbls <- names(table)
@@ -681,7 +682,7 @@ avs.sizes.sorted <- avs.size$Size
 names(avs.sizes.sorted) <- avs.size$tagID
 avs.sizes.sorted <- sort(avs.sizes.sorted, decreasing = TRUE)
 if (length(avs.sizes.sorted) > 30) {
-avs.sizes.sorted <- avs.sizes.sorted[1:30]
+  avs.sizes.sorted <- avs.sizes.sorted[1:30]
 }
 
 par.ori <- par(no.readonly = TRUE)
